
install (FILES
    controls.png
    group-dropdown.png
    icon.png
    MANUAL.html
    mixer-strips.png
    module-parameter-editor.png
    modules.png
    new-project.png
    non-mixer-and-non-daw-in-patchage.png
    non-mixer-complex.png
    single-strip.png
    spatialization-console.png
    spatialization-in-mpe.png
    spatialization-on-strip.png
    spatializer-module.png
    DESTINATION share/doc/non-mixer-xt)
